A simple memory manager

--- a/memory/makefile
+++ b/memory/makefile
@@ -1,3 +1,6 @@
 CC=gcc
-alloc: alloc.c
-	$(CC) alloc.c -o alloc
+memory : 
+	$(CC) -c test_alloc.c
+	$(CC) -c alloc.c
+	$(CC) alloc.o test_alloc.o -o alloct
+	rm *.o
