--- a/memory/makefile
+++ b/memory/makefile
@@ -4,3 +4,9 @@ memory :
 	$(CC) -c alloc.c
 	$(CC) alloc.o test_alloc.o -o alloct
 	rm *.o
+
+heap :
+	$(CC) -c test_ealloc.c
+	$(CC) -c ealloc.c
+	$(CC) ealloc.o test_ealloc.o -o ealloc
+	rm *.o
